--- a/scripts/docker/Dockerfile.jaas
+++ b/scripts/docker/Dockerfile.jaas
@@ -1,9 +1,3 @@
-FROM resin/rpi-raspbian:jessie-20160831  
-RUN apt-get dist-upgrade
-RUN apt-get -qy install jenkins vim less && \
-    apt-get -qy install ca-certificates
-    apt-get -qy install telnet
-RUN apt-get update && \  
-    apt-get upgrade && \
-    apt-get autoremove && \
-    apt-get clean
+FROM stephank/archlinux:armv6-latest  
+RUN pacman -Syu --debug
+RUN pacman -Sy jenkins less vim ca-certificates
