--- a/scripts/docker/Dockerfile.jaas
+++ b/scripts/docker/Dockerfile.jaas
@@ -1,3 +1,3 @@
 FROM stephank/archlinux:armv6-latest  
 RUN pacman -Syu --debug
-RUN pacman -Sy jenkins less vim ca-certificates
+RUN pacman -Sy jenkins less vim ca-certificates grep procps mlocate atop inetutils
